--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -24,6 +24,7 @@
         android:layout_margin="@dimen/fab_margin"
         android:layout_marginEnd="72dp"
         android:layout_marginBottom="72dp"
+        android:backgroundTint="@color/ic_launcher_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_menu_camera" />
