--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,30 +5,16 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
+            android:id="@+id/nav_bills_brief"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/menu_brief" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_capture_bill"
             android:icon="@drawable/ic_menu_camera"
             android:title="@string/menu_capture" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_bills_gallery"
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/menu_bill_gallery" />
     </group>
-
-    <!--<item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="@string/menu_share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="@string/menu_send" />
-        </menu>
-    </item>-->
-
 </menu>
