Working on final toches

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/nav_bills_brief"
-        android:name="com.example.billsyfy.ui.home.BillsBriefFragment"
+        android:name="com.example.billsyfy.ui.BillsBriefFragment"
         android:label="@string/menu_brief"
         tools:layout="@layout/fragment_bills_brief" >
         <action
@@ -20,7 +20,7 @@
 
     <fragment
         android:id="@+id/nav_capture_bill"
-        android:name="com.example.billsyfy.ui.gallery.CaptureBillFragment"
+        android:name="com.example.billsyfy.ui.CaptureBillFragment"
         android:label="@string/menu_capture"
         tools:layout="@layout/fragment_capture_bill" >
         <action
@@ -30,13 +30,13 @@
 
     <fragment
         android:id="@+id/nav_bills_gallery"
-        android:name="com.example.billsyfy.ui.slideshow.BillsGalleryFragment"
+        android:name="com.example.billsyfy.ui.BillsGallery.BillsGalleryFragment"
         android:label="@string/menu_bill_gallery"
         tools:layout="@layout/fragment_bills_gallery" />
 
     <fragment
         android:id="@+id/nav_new_bill"
-        android:name="com.example.billsyfy.ui.tools.NewBillFragment"
+        android:name="com.example.billsyfy.ui.NewBillFragment"
         android:label="@string/menu_bill_form"
         tools:layout="@layout/fragment_new_bill" />
 
