--- a/app/src/main/res/layout/activity_gallery_preview.xml
+++ b/app/src/main/res/layout/activity_gallery_preview.xml
@@ -8,6 +8,18 @@
     android:background="#000000">
 
 
+    <TextView
+        android:id="@+id/bill_details"
+        android:layout_width="match_parent"
+        android:layout_height="96dp"
+        android:maxLines="@integer/config_navAnimTime"
+        android:padding="@dimen/activity_horizontal_margin"
+        android:shadowColor="#001F1D1D"
+        android:singleLine="false"
+        android:text=""
+        android:textAlignment="gravity"
+        android:textColor="#FDCCCCCC" />
+
     <RelativeLayout
         android:id="@+id/relative_container"
         android:layout_width="match_parent"
@@ -18,17 +30,18 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_centerInParent="true"
+            android:padding="@dimen/activity_horizontal_margin"
             android:src="@drawable/blank"
-            app:zoomage_restrictBounds="false"
             app:zoomage_animateOnReset="true"
-            app:zoomage_autoResetMode="UNDER"
             app:zoomage_autoCenter="true"
-            app:zoomage_zoomable="true"
-            app:zoomage_translatable="true"
-            app:zoomage_minScale="0.6"
+            app:zoomage_autoResetMode="UNDER"
             app:zoomage_maxScale="8"
-            />
+            app:zoomage_minScale="0.6"
+            app:zoomage_restrictBounds="false"
+            app:zoomage_translatable="true"
+            app:zoomage_zoomable="true" />
 
 
-   </RelativeLayout>
+    </RelativeLayout>
+
 </LinearLayout>
